llvm/src/snapshots/transmute_llvm__tests__print_string_indirect_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@str = private unnamed_addr constant [6 x i8] c"hello\00", align 1
@str.1 = private unnamed_addr constant [6 x i8] c"world\00", align 1

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

declare void @_TM0_5print1s6string(ptr)

define void @_TM0_1f0() gc "shadow-stack" {
entry:
  %"world#local#sym27#" = alloca ptr, align 8
  %"hello#local#sym26#" = alloca ptr, align 8
  store ptr null, ptr %"hello#local#sym26#", align 8
  call void @llvm.gcroot(ptr nonnull %"hello#local#sym26#", ptr null)
  store ptr null, ptr %"world#local#sym27#", align 8
  call void @llvm.gcroot(ptr nonnull %"world#local#sym27#", ptr null)
  %new_str = call ptr @tmc_stdlib_string_new(ptr nonnull @str, i64 5)
  store ptr %new_str, ptr %"hello#local#sym26#", align 8
  call void @gc_run()
  %new_str1 = call ptr @tmc_stdlib_string_new(ptr nonnull @str.1, i64 5)
  store ptr %new_str1, ptr %"world#local#sym27#", align 8
  call void @gc_run()
  %"hello#local#sym26#2" = load ptr, ptr %"hello#local#sym26#", align 8
  call void @_TM0_5print1s6string(ptr %"hello#local#sym26#2")
  %"world#local#sym27#3" = load ptr, ptr %"world#local#sym27#", align 8
  call void @_TM0_5print1s6string(ptr %"world#local#sym27#3")
  ret void
}

attributes #0 = { nounwind }
