llvm/src/snapshots/transmute_llvm__tests__print_string_indirect_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str = private unnamed_addr constant [6 x i8] c"hello\00", align 1
@str.1 = private unnamed_addr constant [6 x i8] c"world\00", align 1

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

declare void @_TM0_5print1s6string(ptr)

define void @_TM0_1f0() gc "shadow-stack" {
entry:
  %"world#local#sym23#" = alloca ptr, align 8
  %"hello#local#sym22#" = alloca ptr, align 8
  store ptr null, ptr %"hello#local#sym22#", align 8
  call void @llvm.gcroot(ptr %"hello#local#sym22#", ptr null)
  store ptr null, ptr %"world#local#sym23#", align 8
  call void @llvm.gcroot(ptr %"world#local#sym23#", ptr null)
  %new_str = call ptr @tmc_stdlib_string_new(ptr @str, i64 5)
  store ptr %new_str, ptr %"hello#local#sym22#", align 8
  call void @gc_run()
  %new_str1 = call ptr @tmc_stdlib_string_new(ptr @str.1, i64 5)
  store ptr %new_str1, ptr %"world#local#sym23#", align 8
  call void @gc_run()
  %"hello#local#sym22#2" = load ptr, ptr %"hello#local#sym22#", align 8
  call void @_TM0_5print1s6string(ptr %"hello#local#sym22#2")
  %"world#local#sym23#3" = load ptr, ptr %"world#local#sym23#", align 8
  call void @_TM0_5print1s6string(ptr %"world#local#sym23#3")
  ret void
}

attributes #0 = { nounwind }
