llvm/src/snapshots/transmute_llvm__tests__struct_as_parameter_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

@layout_s6Struct = global [1 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1s6Struct(ptr %"s#param#sym22#") gc "shadow-stack" {
entry:
  %"s#param#sym22#.field#idx0#sym21#" = getelementptr inbounds %"Struct#id0", ptr %"s#param#sym22#", i32 0, i32 0
  %"s#param#sym22#.field#idx0#sym21#1" = load i64, ptr %"s#param#sym22#.field#idx0#sym21#", align 4
  ret i64 %"s#param#sym22#.field#idx0#sym21#1"
}

attributes #0 = { nounwind }
