llvm/src/snapshots/transmute_llvm__tests__struct_assignment_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type {}

@layout_s6Struct = global [2 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"s#local#sym21#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym21#", align 8
  call void @llvm.gcroot(ptr %"s#local#sym21#", ptr @layout_s6Struct)
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64), i64 ptrtoint (ptr getelementptr ({ i1, %"Struct#id0" }, ptr null, i64 0, i32 1) to i64))
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym21#", align 8
  call void @gc_run()
  ret i64 1
}

attributes #0 = { nounwind }
