llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_2_fields_mixed1_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%"Struct#id0" = type { i64, i64 }

@layout_struct_Struct = global [1 x i64] zeroinitializer

declare void @print(i64)

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

define private void @_glob() {
entry:
  unreachable
}

define i64 @f(i64 %"n#param#sym22#") gc "shadow-stack" {
entry:
  %"s#local#sym23#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym23#", align 8
  call void @llvm.gcroot(ptr %"s#local#sym23#", ptr @layout_struct_Struct)
  %"add#" = add i64 %"n#param#sym22#", 1
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64))
  store i64 %"add#", ptr %"heap#struct#Struct#id0#", align 4
  %"heap#struct#Struct#id0#.field2#idx1#sym21" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 1
  store i64 0, ptr %"heap#struct#Struct#id0#.field2#idx1#sym21", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym23#", align 8
  call void @gc_run()
  ret i64 1
}

attributes #0 = { nounwind }
