llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_2_fields_mixed1_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64, i64 }

declare void @print(i64)

define i64 @f(i64 %"n#param#sym22#") {
entry:
  %"s#local#sym23#" = alloca %"Struct#id0", align 8
  %"add#" = add i64 %"n#param#sym22#", 1
  %insert = insertvalue %"Struct#id0" { i64 undef, i64 0 }, i64 %"add#", 0
  store %"Struct#id0" %insert, ptr %"s#local#sym23#", align 4
  ret i64 1
}
