llvm/src/snapshots/transmute_llvm__tests__struct_lit_as_parameter_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

@layout_struct_Struct = global [1 x i64] zeroinitializer

declare void @print(i64)

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

define private void @_glob() {
entry:
  unreachable
}

define i64 @f(ptr %"s#param#sym22#") gc "shadow-stack" {
entry:
  %"s#param#sym22#.field#idx0#sym21#" = getelementptr inbounds %"Struct#id0", ptr %"s#param#sym22#", i32 0, i32 0
  %"s#param#sym22#.field#idx0#sym21#1" = load i64, ptr %"s#param#sym22#.field#idx0#sym21#", align 4
  ret i64 %"s#param#sym22#.field#idx0#sym21#1"
}

define i64 @g() gc "shadow-stack" {
entry:
  %"gcroot#heap#struct#Struct#id0#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#struct#Struct#id0#", align 8
  call void @llvm.gcroot(ptr %"gcroot#heap#struct#Struct#id0#", ptr @layout_struct_Struct)
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64))
  store ptr %"heap#struct#Struct#id0#", ptr %"gcroot#heap#struct#Struct#id0#", align 8
  %"heap#struct#Struct#id0#.field#idx0#sym21" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  store i64 1, ptr %"heap#struct#Struct#id0#.field#idx0#sym21", align 4
  %"f#res#" = call i64 @f(ptr %"heap#struct#Struct#id0#")
  ret i64 %"f#res#"
}

attributes #0 = { nounwind }
