llvm/src/snapshots/transmute_llvm__tests__struct_of_array_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@"gc_callbacks#s1S" = global { ptr, ptr } { ptr @"gc_callback#mark#s1S", ptr null }

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

declare void @_TM0_5print1s(ptr)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define void @"gc_callback#mark#s1S"(ptr %0) {
entry:
  %"local#field0" = load ptr, ptr %0, align 8
  call void @gc_mark(ptr %"local#field0")
  ret void
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#array#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#array#", align 8
  call void @llvm.gcroot(ptr nonnull %"gcroot#heap#array#", ptr null)
  %"a#local#sym24#" = alloca ptr, align 8
  store ptr null, ptr %"a#local#sym24#", align 8
  call void @llvm.gcroot(ptr nonnull %"a#local#sym24#", ptr null)
  %"heap#array#" = call ptr @gc_malloc(i64 16, i64 8, ptr null)
  store ptr %"heap#array#", ptr %"gcroot#heap#array#", align 8
  store i64 0, ptr %"heap#array#", align 4
  %"heap#array#.repack8" = getelementptr inbounds [2 x i64], ptr %"heap#array#", i64 0, i64 1
  store i64 1, ptr %"heap#array#.repack8", align 4
  %"heap#struct#S#id0#" = call ptr @gc_malloc(i64 8, i64 8, ptr nonnull @"gc_callbacks#s1S")
  store ptr %"heap#array#", ptr %"heap#struct#S#id0#", align 8
  store ptr %"heap#struct#S#id0#", ptr %"a#local#sym24#", align 8
  call void @gc_run()
  %"a#local#sym24#2" = load ptr, ptr %"a#local#sym24#", align 8
  %"a#local#sym24#2.field#idx0#sym23#3" = load ptr, ptr %"a#local#sym24#2", align 8
  call void @tmc_check_array_index(i64 0, i64 2, i64 9, i64 21)
  %"array[?]#4" = load i64, ptr %"a#local#sym24#2.field#idx0#sym23#3", align 4
  ret i64 %"array[?]#4"
}

attributes #0 = { nounwind }
