llvm/src/snapshots/transmute_llvm__tests__struct_of_array_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"S#id0" = type { ptr }

@layout_s1S = global [4 x i64] [i64 0, i64 1, i64 0, i64 ptrtoint (ptr @layout_a2n to i64)]
@layout_a2n = global [3 x i64] [i64 1, i64 2, i64 0]

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#array#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#array#", align 8
  call void @llvm.gcroot(ptr %"gcroot#heap#array#", ptr @layout_a2n)
  %"a#local#sym22#" = alloca ptr, align 8
  store ptr null, ptr %"a#local#sym22#", align 8
  call void @llvm.gcroot(ptr %"a#local#sym22#", ptr @layout_s1S)
  %"heap#array#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr ([2 x i64], ptr null, i32 1) to i64))
  store ptr %"heap#array#", ptr %"gcroot#heap#array#", align 8
  %"heap#array#1" = load [2 x i64], ptr %"heap#array#", align 4
  %"heap#array#[0]#" = insertvalue [2 x i64] %"heap#array#1", i64 0, 0
  %"heap#array#[1]#" = insertvalue [2 x i64] %"heap#array#[0]#", i64 1, 1
  store [2 x i64] %"heap#array#[1]#", ptr %"heap#array#", align 4
  %"heap#struct#S#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"S#id0", ptr null, i32 1) to i64))
  %"heap#struct#S#id0#.field#idx0#sym21" = getelementptr inbounds %"S#id0", ptr %"heap#struct#S#id0#", i32 0, i32 0
  store ptr %"heap#array#", ptr %"heap#struct#S#id0#.field#idx0#sym21", align 8
  store ptr %"heap#struct#S#id0#", ptr %"a#local#sym22#", align 8
  call void @gc_run()
  %"a#local#sym22#2" = load ptr, ptr %"a#local#sym22#", align 8
  %"a#local#sym22#2.field#idx0#sym21#" = getelementptr inbounds %"S#id0", ptr %"a#local#sym22#2", i32 0, i32 0
  %"a#local#sym22#2.field#idx0#sym21#3" = load ptr, ptr %"a#local#sym22#2.field#idx0#sym21#", align 8
  call void @tmc_check_array_index(i64 0, i64 2, i64 9, i64 21)
  %"array[?]#" = getelementptr [2 x i64], ptr %"a#local#sym22#2.field#idx0#sym21#3", i64 0, i64 0
  %"array[?]#4" = load i64, ptr %"array[?]#", align 4
  ret i64 %"array[?]#4"
}

attributes #0 = { nounwind }
